--- a/ystree.css
+++ b/ystree.css
@@ -1,3 +1,7 @@
+/**
+ysTree by oys
+**/
+
 .ystree {font-size:12px; font-family:'나눔고딕',Malgun Gothic,Tahoma; color:#000;}
 .ystree ul {margin:0; padding:0; list-style:none;}
 .ystree li {margin:0; padding:3px 0 3px 20px; position:relative; background:url('./images/line2.gif') repeat-y;}
